Fix contact alignment again

--- a/web/style.css
+++ b/web/style.css
@@ -53,7 +53,7 @@
     display: flex;
     flex-direction: column;
     row-gap: 22px;
-    align-self: center;
+    align-self: flex-start;
   }
   
   .name {
@@ -142,6 +142,11 @@
       top: 160px;
       flex-grow: 1;
       padding: 160px 50px;
+      font-size: 16px;
+    }
+
+    .contact-info {
+      align-self: center;
       font-size: 16px;
     }
   
